--- a/Backend-Project-Structure/mediAid/pom.xml
+++ b/Backend-Project-Structure/mediAid/pom.xml
@@ -81,6 +81,14 @@
 		    <artifactId>playwright</artifactId>
 		    <version>1.44.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
