--- a/Frontend-Project-Structure/package.json
+++ b/Frontend-Project-Structure/package.json
@@ -15,6 +15,7 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
     "react": "^19.1.1",
